# SPED-Validator

./: .coverage  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  IMPLEMENTATION_LOG.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRD - CLAUDE.txt  PRD_EVOLUCAO_v4.md  README.md  README_FISCAL.md  _run_api.bat  _run_frontend.bat  cli.py  compare_imports.py  config.py  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  git-push.bat  ingest.bat  ingest.py  mapeamento.md  melhorias.txt  pyproject.toml  requirements.txt  rules.yaml  run_prd.sh  setup.sh  start-api.bat  start-frontend.bat  start.bat  start.sh  validadores.txt
.claude/: commit-push.sh  settings.local.json
api/: auth.py  deps.py  main.py
conferencia/: sped oriones mes 02.txt
docs/: MIGRATION_PG.md  PRD_REGRAS.md
frontend/: .env.example  .env.local.example  index.html  package-lock.json  package.json  vite.config.ts
prd/: PRD.md  PRD_v5.md  PRD_v6_motor_xc_cache.md
scripts/: check_hardcoded_indices.py  migrate_fields_json.py  pg_schema.sql
src/: converter.py  embeddings.py  indexer.py  models.py  parser.py  rules.py  searcher.py  validator.py
tests/: conftest.py  test_aliquota_interna_uf.py  test_aliquota_validator.py  test_api.py  test_api_rules.py  test_api_validation.py  test_apuracao_validator.py  test_audit_rules.py  test_audit_scope.py  test_auth.py  test_auto_correction.py  test_base_calculo_validator.py  test_beneficio_audit.py  test_beneficio_cross_validator.py  test_beneficio_validator.py  test_bloco_c_servicos.py  test_bloco_d_validator.py  test_bloco_k_validator.py  test_c190_validator.py  test_c190_xml_dedup.py  test_cfop_validator.py  test_check_hardcoded_indices.py  test_context_builder.py  test_converter.py  test_correction_control.py  test_correction_governance.py  test_correction_hypothesis.py  test_correction_service_concurrency.py  test_cors_config.py  test_cross_block_validator.py  test_cross_engine.py  test_cst_expandido.py  test_cst_hypothesis.py  test_cst_validator.py  test_database_pg.py  test_db_helpers.py  test_destinatario_validator.py  test_devolucao_validator.py  test_difal_extended.py  test_difal_validator.py  (+43 more)
(+154 files in other folders)
